--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -1,16 +1,27 @@
-Description of Requirements, layout and constraints
+\label{nuplatform}
 
-We propose that the cryostat be housed in the extension of the EHN1 Bat 887 at CERN, where the cryogenic system components will also be located. (moved to sec 7)
+A description of construction of components, facility requirements, layout and constraints follows:
+
+%We propose that the cryostat be housed in the extension of the EHN1 Bat 887 at CERN, where the cryogenic system components will also be located. (moved to sec 7)
 
 \begin{itemize}
-\item short description of location and orientation of cryostat + cryogenics system in EHN1 (David)
 
-\item description of beam line layout (Cheng-Ju)
+%short description of location and orientation of cryostat + cryogenics system in EHN1 (David)
+\item {\bf Cryostat construction:}
+The outer steel support structure reduces the time needed for the construction: the structure will be prefabricated in pieces of dimensions appropriate for transportation, shipped to the destination and only assembled in place. Fabrication will take place at the vendor's facility for the most part. This shortens the construction of the outer structure on the detector site, leaving more time for completion of the building infrastructure. If properly designed, a steel structure may allow the cryostat to be moved, should that be desired in the future.
 
-\item space for staging, control room, electronics racks, clean room, scaffolding, etc. (Jack)
+\item {\bf Cryogenics construction:}
 
-\item power requirements and cooling  (Jack ?)
+\item {\bf Detector component construction:} 
+TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at the respective future DUNE detector component production sites. Successively components will be shipped to CERN for further testing and final assembly into the cryostat. This approach allows to ready the various production sites for the first 10~kt module of the DUNE far detector.
+
+\item Requirements for staging space, control room, electronics racks, clean room, scaffolding, etc. (Jack)
+
+\item power requirements and cooling 
 
 \item ...
 
 \end{itemize}
+
+\input{installation}
+
