--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,4 +1,7 @@
 \begin{thebibliography}{99}
+
+\bibitem{note} {\color{red} NEED TO ESTABLISH PROPER ORDER OF REFERENCES}
+
 \bibitem{spade_icecube} IceCube Data Movement \url{https://icecube.wisc.edu/science/data/datamovement}.
 \bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experiment \url{http://arxiv.org/pdf/1501.06969.pdf}.
 \bibitem{atlas_express} Prompt reconstruction of LHC collision data with the ATLAS reconstruction software, N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
@@ -11,7 +14,7 @@
 % \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
 % \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
 
-\bibitem{dunecdr} DUNE CDR.
+\bibitem{dunecdr} DUNE CDR -- ADD LINK HERE
 
 \bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
 
@@ -59,6 +62,22 @@ detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (201
 
 \bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" by 
 A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
+
+\bibitem{stopmu} docdb \# 9079 -- ADD LINK HERE
+
+\bibitem{spacecharge} docdb \#6471 -- ADD LINK HERE
+
+\bibitem{CFD} docdb \#6140  -- ADD LINK HERE
+
+\bibitem{rayleigh} 128nm light Rayleigh scattering length reference
+
+\bibitem{absorption} 128nm light absorption length reference
+
+%\bibitem{conversio-eff}
+
+\bibitem{sensl} SensL SiPM reference
+
+\bibitem{outgassing} Outgassing reference based on Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD)
 
 
 \end{thebibliography}
