--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -59,9 +59,17 @@
 
 \begin{abstract}
 
-After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector and charged particle beam measurement program. 
-We describe the required beam line and beam monitoring instrumentation for the project.
-The proposed single phase liquid argon detector presently described corresponds to the LBNE detector design. Discussions about alternate designs are in progress and this proposal will be updated according to a developing consensus on the detector design. The detector will be placed inside a membrane cryostat which will be connected to a cryogenics systems for which we provide engineering details. The proposal concludes with a description of data handling and analysis plans, as well as a schedule and an overview of the organizational structure put in place to execute the plan.
+After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector engineering test and charged particle beam measurement program. A detailed motivation for the planed beam measurements is provided. The proposed
+single phase liquid argon detector design is described in detail. 
+The proposed single phase liquid argon detector described corresponds largely to the former LBNE detector design which has been adopted by the DUNE collaboration for the first 10~kt detector module at the far site.
+The detector will be placed inside a membrane cryostat which will be connected to a cryogenics systems for both of which we provide engineering details. 
+Furthermore we introduce and justify the anticipated calibration tools before 
+describing the required beam line and beam monitoring instrumentation for the project.
+Installation and computing plans are presented before
+the proposal concludes with a schedule, an overview of the organizational structure put in place to execute the plan and 
+the sharing of responsibilities.
+
+%analysis plans, 
 
 \end{abstract}
 
@@ -98,10 +106,10 @@ The proposed single phase liquid argon detector presently described corresponds 
 	\input{testbeamreq}
 
 
-\section{Computing requirements, data handling and software} %  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
+\section{Computing, data handling and software} %  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
 	\input{computing}
 
-\section{Installation and CERN neutrino platform}  % [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
+\section{Installation and infrastructure}  % [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
 	\input{nuplatform}
 	
 	
@@ -114,6 +122,4 @@ The proposed single phase liquid argon detector presently described corresponds 
 
 \input{bibliography}
 
-{\color{red}
-$\rightarrow$ total estimated page count: $\sim$60 pages}
 \end{document}
