--- a/bibliography.tex
+++ b/bibliography.tex
@@ -63,13 +63,13 @@ detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (201
 \bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" by 
 A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
-\bibitem{stopmu} docdb \# 9079 -- ADD LINK HERE
+\bibitem{stopmu} docdb~\#9079, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=9079}
 \bibitem{bueno}
 ``Nucleon Decay Searches with large Liquid Argon TPC Detectors at Shallow Depths: atmospheric neutrinos and cosmogenic backgrounds'', A.Bueno, Z.Dai, Y.Ge, M.Laffranchi, A.J.Melgarejo, A.Meregaglia, S.Navas, A.Rubbia, JHEP 0704:041, (2007).
 
-\bibitem{spacecharge} docdb \#6471 -- ADD LINK HERE
+\bibitem{spacecharge} docdb~\#6471, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6471}
 
-\bibitem{CFD} docdb \#6140  -- ADD LINK HERE
+\bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 
 \bibitem{rayleigh} 128nm light Rayleigh scattering length reference
 
@@ -81,5 +81,6 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
 \bibitem{outgassing} Outgassing reference based on Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD)
 
+\bibitem{LBNEorg} doc-db~\#6547; \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6547}
 
 \end{thebibliography}
