--- a/organ.tex
+++ b/organ.tex
@@ -22,12 +22,39 @@ The shown schedule is based on experience of designing and manufacturing compone
 
 \subsection{Organization}
 
-\begin{itemize}
+The CERN prototype effort is coordinated by the "CERN Prototype Technical Coordinator (CTC)" \cite{LBNEorg}.
+The charge of the CERN prototype Collaboration Technical Coordinator is defined as follows.
 
-\item Add description of working group structure 
+The CERN prototype CTC is responsible for the following:
+\begin{enumerate}[i]	\item Prioritize and maintain a schedule of collaboration activities regarding simulations, physics analysis. 	\item Prioritize and maintain a schedule of other collaboration service activities on the CERN prototype.  These activities may include collaboration participation in assembly, commissioning, calibration, debugging, data-taking, shifts, etc. 	\item The responsibility of the CERN prototype CTC shall including maintaining a database of contributions from the collaboration to the CERN detector and beam test prototyping.	\item The CERN prototype CTC shall recruit collaboration personnel and resources.	\item The CERN prototype CTC shall coordinate with the DUNE far detector L-2 project manager and the DUNE technical coordinator
+\end{enumerate}
 
-\end{itemize}
+Several sub-groups are created to effectively execute the tasks required for the CERN prototype detector and beam test. These are: 
+{\bf measurement program + analysis:}   Their charge is: to develop comprehensive and prioritized list of measurements need to evaluate detector performance and detector charged particle response to serve as input into LBNF physics sensitivity studies (beam physics, nucleon decay, supernovae, atmospheric neutrinos).  And to perform simulation studies to quantitatively compare relevance of various measurements.
 
+{\bf beam:} Their charge is: to work closely with the measurement group to identify ideal beam requirements, to work closely with the CERN beam group to develop realistic beam design to make relevant beam measurements, to evaluate and optimize possible beam injection points and beam orientations, to perform beam simulations and provide simulated beam spectra as input for detector response simulations, to identify required beam instrumentation for beam characterization, and to develop beam run plans.
+{\bf calibration:}  Their charge is:  to develop tools to calibrate properties of the detector, to interface with the physics measurement group to prioritize different calibration measurements, and to interface with detector subcomponent working groups to identify all required calibration tools and their integration into the detector /cryostat design.\\
+
+
+The CERN prototype coordinators work closely with the DUNE far detector manager and the DUNE technical coordinator. 
+Work on detector components is fully embedded in the DUNE project structure. The CTC also coordinates closely with the CERN nu-platform
+leader.\\
+The leaders of the "measurement program analysis" subgroup work closely with the DUNE physics and software coordinators.
+The leader of the "beam" subgroup works closely with the relevant CERN beam-line group leader.
+
+
+\subsubsection{CERN single phase prototype personnel}
+
+CERN prototype  Technical Coordinators (2014/15):\\
+ Thomas Kutter (LSU) and Greg Pawloski (Minnesota)\\
+ 
+ Measurement subgroup leader: \\
+ \indent Donna Naples (Pittsburgh) and Jaroslaw Nowak (Lancaster)\\
+ 
+ Beam subgroup leader: Cheng-Ju Lin (LBNL)\\
+
+Calibration subgroup leader: \\
+\indent  Qiuguang Liu (LANL) [interim] , Michele Weber (Bern)\\
 
 
 \subsection{Division of Responsibilities}
