--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -18,6 +18,7 @@
 \usepackage{color}
 \usepackage[table]{xcolor}
 \usepackage{colortbl}
+\usepackage{enumerate}
 
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
 %\usepackage[firstpage]{draftwatermark}
