--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,40 +1,30 @@
 \begin{thebibliography}{99}
 
-\bibitem{note} {\color{red} NEED TO ESTABLISH PROPER ORDER OF REFERENCES}
+%
+%cites from introduction
+%
 
-\bibitem{spade_icecube} IceCube Data Movement \url{https://icecube.wisc.edu/science/data/datamovement}.
-\bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experiment \url{http://arxiv.org/pdf/1501.06969.pdf}.
-\bibitem{atlas_express} Prompt reconstruction of LHC collision data with the ATLAS reconstruction software, N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
-
-\bibitem{montanari_35ton} First scientific application of the membrane cryostat technology, D.Montanari et al, \textit{AIP Proceedings 1573, 1664 (2014)} \url{http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4860907}
-
- \bibitem{acciarri_sbn_proposal} A Proposal for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam \textit{R.Acciarri et al} \url{http://arxiv.org/abs/1503.01520}
- 
-% Add if doc can be made public in docdb -- AH 
-% \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
-% \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
+%
+%cites from detbeamtest
+%
 
 \bibitem{dunecdr} DUNE CDR -- ADD LINK HERE
 
 \bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
-
 
 \bibitem{icarus_mainref} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
 %\bibitem{ICARUS2} 
 "Performance of a liquid argon time projection chamber exposed to the CERN West Area Neutrino Facility neutrino beam", F. Arneodo et al. (ICARUS-Milano Collaboration) - Physical Review D (2006) (Vol. 74, No. 112001). 
 
 \bibitem{argoneut1} ``First Measurements of Inclusive Muon Neutrino Charged Current Differential Cross Sections on Argon." C. Anderson et al, Physical Review Letters (PRL) 108 (2012), 161802. 
+
 \bibitem{argoneut2} "The ArgoNeuT Detector in the NuMI Low-Energy beam line at Fermilab" C. Anderson et al, Journal of Instrumentation (JINST), 2012 JINST Vol. 7 P10019. 
 
 \bibitem{fluka05} "FLUKA: a multi-particle transport code" A. Ferrari, P.R. Sala, A. Fasso`, and J. Ranft, CERN-2005-10 (2005), INFN/TC\_05/11, SLAC-R-773.
 
-\bibitem{icarus_reco}
-%spatial and calorimetric reconstruction algorithm is also published:
-``Precise 3D track reconstruction algorithm for the ICARUS T600 liquid argon time projection chamber detector'', ICARUS Collaboration, 
-Adv.High Energy Phys., vol. 2013, p. 260820, 2013
-
 \bibitem{miniboonefsi}  A. A. Aguilar-Arevalo, et al.,
 Phys. Rev. D 83, 052007 (2011).
+
 \bibitem{minervafsi} Charged Pion Production in Interactions on Hydrocarbon 
 at $\overline{E}$= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
 
@@ -43,19 +33,21 @@ T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci,  {\bf 52}, 23 (2002).
 
 \bibitem{jaffe} ``The columnar theory of ionization'', Ann. Phys. {\bf 42}, 303 (1931).
 
-\bibitem{icarus_recombination} ``Study of electron recombination in liquid argon with the ICARUS TPC'', S. Amoruso et. al, NIM A {\bf 523}, 275 (2004). 
-
 \bibitem{argoneut_angle} "A study of electron recombination using highly ionizing particles in the ArgoNeuT Liquid Argon TPC", 
 R. Acciarri et al, Journal of Instrumentation 
 (JINST), 2013 JINST Vol. 8 P08005.
 
-
+\bibitem{icarus_recombination} ``Study of electron recombination in liquid argon with the ICARUS TPC'', S. Amoruso et. al, NIM A {\bf 523}, 275 (2004). 
 
 \bibitem{nn_pid} based on
 ``Neural Network Parameterizations of Electromagnetic Nucleon Form Factors'', K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
 \bibitem{rd_pid} 
 \url{http://www.ire.pw.edu.pl/~rsulej/NetMaker}
 
+\bibitem{icarus_reco}
+%spatial and calorimetric reconstruction algorithm is also published:
+``Precise 3D track reconstruction algorithm for the ICARUS T600 liquid argon time projection chamber detector'', ICARUS Collaboration, 
+Adv.High Energy Phys., vol. 2013, p. 260820, 2013
 
 \bibitem{icarus_eg} ``Experimental search for the LSND anomaly with the ICARUS
 detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (2013) 73:2345.
@@ -64,23 +56,82 @@ detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (201
 A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
 \bibitem{stopmu} docdb~\#9079, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=9079}
+
 \bibitem{bueno}
 ``Nucleon Decay Searches with large Liquid Argon TPC Detectors at Shallow Depths: atmospheric neutrinos and cosmogenic backgrounds'', A.Bueno, Z.Dai, Y.Ge, M.Laffranchi, A.J.Melgarejo, A.Meregaglia, S.Navas, A.Rubbia, JHEP 0704:041, (2007).
 
+%
+%cites from singlephasedet
+%
+  %
+  %cites from singlephasedet input: APA-CP-FieldCage
+  %
 \bibitem{spacecharge} docdb~\#6471, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6471}
 
 \bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 
-\bibitem{rayleigh} 128nm light Rayleigh scattering length reference
-
+  %
+  %cites from singlephasedet input: photondetector
+  %
+\bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 \bibitem{absorption} 128nm light absorption length reference
 
 %\bibitem{conversio-eff}
 
 \bibitem{sensl} SensL SiPM reference
 
+  %
+  %cites from singlephasedet input: readout
+  %
+
+  %
+  %cites from singlephasedet input: daq
+  %
+
+%
+%cites from cryo
+%
+
+%\bibitem{montanari_35ton} First scientific application of the membrane cryostat technology, D.Montanari et al, \textit{AIP Proceedings 1573, 1664 (2014)} \url{http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4860907}
+
+% Add if doc can be made public in docdb -- AH 
+% \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
+% \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
+
+% \bibitem{acciarri_sbn_proposal} A Proposal for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam \textit{R.Acciarri et al} \url{http://arxiv.org/abs/1503.01520}
+
 \bibitem{outgassing} Outgassing reference based on Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD)
 
+%
+%cites from calibration
+%
+
+%
+%cites from testbeamreq
+%
+
+%
+%cites from computing
+%
+
+\bibitem{spade_icecube} IceCube Data Movement \url{https://icecube.wisc.edu/science/data/datamovement}.
+
+\bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experiment \url{http://arxiv.org/pdf/1501.06969.pdf}.
+
+\bibitem{atlas_express} Prompt reconstruction of LHC collision data with the ATLAS reconstruction software, N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
+
+%
+%cites from nuplatform
+%
+ 
+%
+%cites from organ
+%
 \bibitem{LBNEorg} doc-db~\#6547; \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6547}
+
+%
+%cites from summary
+%
+
 
 \end{thebibliography}
